wix: add new scheme files

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -6388,8 +6388,7 @@ feature-core/INSTALLDIR/lib/support/samples/tools/Sample_Snippet_-_Double_Click_
 feature-core/INSTALLDIR/lib/support/samples/tools/Start_Browser.komodotool
 feature-core/INSTALLDIR/lib/support/samples/tools/toggle-word-wrap-edit.komodotool
 feature-core/INSTALLDIR/lib/support/samples/xslt_sample.xsl
-feature-core/INSTALLDIR/lib/support/schemes/3024_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/3024_Light.ksf
+feature-core/INSTALLDIR/lib/support/schemes/3024.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Ashes_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Ashes_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Atelierdune_Dark.ksf
@@ -6398,48 +6397,32 @@ feature-core/INSTALLDIR/lib/support/schemes/Atelierforest_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Atelierforest_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Atelierheath_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Atelierheath_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Atelierlakeside_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Atelierlakeside_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Atelierseaside_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Atelierseaside_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Bespin_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Bespin_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Brewer_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Brewer_Light.ksf
+feature-core/INSTALLDIR/lib/support/schemes/Bespin.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Chalk_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Chalk_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Codeschool_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Codeschool_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Default_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Default_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Eighties_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Eighties_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Embers_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Embers_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Google_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Google_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Grayscale_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Grayscale_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Greenscreen_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Greenscreen_Light.ksf
+feature-core/INSTALLDIR/lib/support/schemes/Greenscreen.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Isotope_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Isotope_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Londontube_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Londontube_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Marrakesh_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Marrakesh_Light.ksf
+feature-core/INSTALLDIR/lib/support/schemes/Marrakesh.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Mocha_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Mocha_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Monokai_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Monokai_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Ocean_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Ocean_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Paraiso_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Paraiso_Light.ksf
+feature-core/INSTALLDIR/lib/support/schemes/Paraiso.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Railscasts_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Railscasts_Light.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Shapeshifter_Dark.ksf
-feature-core/INSTALLDIR/lib/support/schemes/Shapeshifter_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Solarized_Dark.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Solarized_Light.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Tomorrow_Dark.ksf
@@ -6450,6 +6433,34 @@ feature-core/INSTALLDIR/lib/support/schemes/Default.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Emacs.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Vi.kkf
 feature-core/INSTALLDIR/lib/support/schemes/_vi.kkf
+feature-core/INSTALLDIR/lib/support/schemes/schemes/__init__.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/ashes.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/atelierdune.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/atelierforest.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/atelierheath.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/bespin.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/chalk.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/default.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/eighties.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/embers.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/grayscale.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/greenscreen.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/isotope.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/londontube.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/marrakesh.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/mocha.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/monokai.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/ocean.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/paraiso.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/railscasts.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/s3024.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/solarized.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/tomorrow.py
+feature-core/INSTALLDIR/lib/support/schemes/schemes/twilight.py
+feature-core/INSTALLDIR/lib/support/schemes/templates/__init__.py
+feature-core/INSTALLDIR/lib/support/schemes/templates/common.py
+feature-core/INSTALLDIR/lib/support/schemes/templates/dark.py
+feature-core/INSTALLDIR/lib/support/schemes/templates/light.py
 feature-core/INSTALLDIR/lib/support/tcl/tcl-core.tip
 feature-core/INSTALLDIR/lib/support/tcl/tk-core.tip
 feature-core/INSTALLDIR/lib/support/toolbox/koToolbox.sql
