build: update wix files
(integrated from master branch change 0912839 by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1916,6 +1916,9 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/code
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/pylib/langinfo_go.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/Common/Go.go
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/templates/All Languages/Go.go
+feature-core/INSTALLDIR/lib/mozilla/extensions/icomoon@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/icomoon@activestate.com/content/icons.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/icomoon@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/content/manifest/init.js
@@ -1925,7 +1928,6 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/skin/config.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_ambiance@activestate.com/skin/icon.png
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_blue@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_blue@activestate.com/content/blue.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_blue@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_blue@activestate.com/content/manifest/init.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_blue@activestate.com/content/overlay_pref-ui.xul
@@ -1943,31 +1945,24 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_classic@activestate.com/s
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_classic@activestate.com/skin/icon.png
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_classic@activestate.com/skin/rules.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/content/cupertino-hidpi.jar
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/content/cupertino.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/content/manifest/init.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/content/overlay_pref-ui.xul
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/locale/en-US/iconset-cupertino.dtd
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/skin/config-hidpi.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/skin/config.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/skin/icon.png
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino@activestate.com/skin/rules.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/content/cupertino-blue-hidpi.jar
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/content/cupertino-blue.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/content/manifest/init.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/content/overlay_pref-ui.xul
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/locale/en-US/iconset-cupertino-blue.dtd
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/skin/config-hidpi.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/skin/config.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/skin/icon.png
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_cupertino-blue@activestate.com/skin/rules.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/content/dark.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/content/manifest/init.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/content/overlay_pref-ui.xul
@@ -1976,7 +1971,6 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/loca
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/skin/config.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_dark@activestate.com/skin/icon.png
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/content/light.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/content/manifest/init.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/content/overlay_pref-ui.xul
@@ -1987,7 +1981,6 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_light@activestate.com/ski
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/content/manifest/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/content/manifest/init.js
-feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/content/orange.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/content/overlay_pref-ui.xul
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/iconset_orange@activestate.com/locale/en-US/iconset-orange.dtd
