wix: add markdown viewer
(integrated from master branch change f3fb187 by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2011,6 +2011,9 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/kopy@activestate.com/kopy.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/markdown-viewer@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/markdown-viewer@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/markdown-viewer@activestate.com/markdown-viewer.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/openfiles@activestate.com/openfiles.jar
