wix: add scope files
(integrated from master branch change a0fc619 by Todd Whiteman <toddw@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2073,6 +2073,10 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/b
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-openfiles@activestate.com/scope-openfiles.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-sections@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-sections@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-sections@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-sections@activestate.com/scope-sections.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-tools@activestate.com/install.rdf
