mozilla: need extra quotes around defines, for Windows
(integrated from master branch change 0fc829c by Todd Whiteman <toddw@activestate.com>)

--- a/mozilla/patches-new/komodo-35.0/komodo/app/Makefile.in
+++ b/mozilla/patches-new/komodo-35.0/komodo/app/Makefile.in
@@ -18,8 +18,8 @@ AB_CD = en-US
 
 DEFINES += \
   -DAB_CD=$(AB_CD) \
-  -DKOMODO_ICO='$(srcdir)/komodo.ico' \
-  -DDOCUMENT_ICO='$(DIST)/branding/document.ico' \
+  -DKOMODO_ICO='"$(srcdir)/komodo.ico"' \
+  -DDOCUMENT_ICO='"$(DIST)/branding/document.ico"' \
   $(NULL)
 
 # Build a binary bootstrapping with XRE_main
