--- a/mozilla/patches-new/komodo-35.0/komodo/app/Makefile.in
+++ b/mozilla/patches-new/komodo-35.0/komodo/app/Makefile.in
@@ -2,16 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-DEPTH		= @DEPTH@
-topsrcdir	= @top_srcdir@
-srcdir		= @srcdir@
-VPATH		= @srcdir@
-
-include $(DEPTH)/config/autoconf.mk
-
 PREF_JS_EXPORTS = $(srcdir)/profile/komodo.js \
 		  $(NULL)
-
 
 # hardcode en-US for the moment
 AB_CD = en-US
@@ -38,71 +30,16 @@ NSDISTMODE = copy
 
 include $(topsrcdir)/config/config.mk
 
-ifeq ($(OS_ARCH),WINNT)
-OS_LIBS += $(call EXPAND_LIBNAME,comctl32 comdlg32 uuid shell32 ole32 oleaut32 version winspool)
-OS_LIBS += $(call EXPAND_LIBNAME,usp10 msimg32)
-endif
-
-ifeq ($(OS_ARCH),WINNT)
-RCINCLUDE = splash.rc
-ifndef GNU_CC
-RCFLAGS += -DMOZ_PHOENIX -I$(srcdir)
-else
-RCFLAGS += -DMOZ_PHOENIX --include-dir $(srcdir)
-endif
-ifdef DEBUG
-RCFLAGS += -DDEBUG
-endif
-endif
-
-ifeq ($(OS_ARCH),OS2)
-RESFILE=splashos2.res
-RCFLAGS += -DMOZ_PHOENIX
-ifdef DEBUG
-RCFLAGS += -DDEBUG
-endif
-RCFLAGS += -DKOMODO_ICO=\"$(DIST)/branding/firefox-os2.ico\" -DDOCUMENT_ICO=\"$(DIST)/branding/document-os2.ico\"
-endif
+PROGRAMS_DEST = $(DIST)/bin
 
 include $(topsrcdir)/config/rules.mk
-
-ifeq ($(MOZ_WIDGET_TOOLKIT),photon)
-LIBS += -lphexlib
-endif
 
 ifeq ($(MOZ_WIDGET_TOOLKIT),gtk2)
 # Ensure komodo binary uses LD_LIBRAY_PATH of the binary's directory.
 LDFLAGS += -Wl,-rpath=\$$ORIGIN
 endif
 
-ifeq ($(OS_ARCH),WINNT)
-#
-# Control the default heap size.
-# This is the heap returned by GetProcessHeap().
-# As we use the CRT heap, the default size is too large and wastes VM.
-#
-# The default heap size is 1MB on Win32.
-# The heap will grow if need be.
-#
-# Set it to 256k.  See bug 127069.
-#
-ifndef GNU_CC
-LDFLAGS += /HEAP:0x40000
-ifeq ($(OS_TEST),x86_64)
-# set stack to 2MB on x64 build.  See bug 582910
-LDFLAGS += -STACK:2097152
-endif
-endif
-endif
-
 ifneq (,$(filter-out OS2 WINNT,$(OS_ARCH)))
-
-ifneq ($(MOZ_WIDGET_TOOLKIT),gtk2)
-
-libs:: 
-	cp -p $(MOZ_APP_NAME)$(BIN_SUFFIX) $(DIST)/bin/$(MOZ_APP_NAME)-bin$(BIN_SUFFIX)
-
-endif
 
 GARBAGE += $(addprefix $(DIST)/bin/defaults/pref/, komodo.js)
 
@@ -111,13 +48,6 @@ endif
 ifeq ($(MOZ_WIDGET_TOOLKIT),gtk2)
 libs::
 	$(INSTALL) $(IFLAGS1) $(srcdir)/default.xpm    $(DIST)/bin/chrome/icons/default
-endif
-
-ifdef MOZ_SPLASHSCREEN
-ifeq ($(MOZ_WIDGET_TOOLKIT),windows)
-libs::
-	$(INSTALL) $(IFLAGS1) $(DIST)/branding/splash.bmp $(DIST)/bin
-endif
 endif
 
 libs:: $(srcdir)/profile/prefs.js
