Missing commandos doc file.
(integrated from 9.1.0 branch change c391072 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/install/wix/feature-docs.ini
+++ b/src/install/wix/feature-docs.ini
@@ -287,3 +287,4 @@ feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/unittest.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/urls.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/vikeybind.html
 feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/workspace.html
+feature-docs/INSTALLDIR/lib/mozilla/chrome/komododoc/locale/en-US/commando.html
