Editor: Added support for .editorconfig - closes #271
rn=

(integrated from master branch change 8e6c82d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1933,6 +1933,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/t
 feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/window.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/analytics@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/breadcrumbs@activestate.com.xpi
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/commando@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/chrome.manifest
