Update installer wix for editorconfig and tutorial tool
(integrated from master branch change 323ecfc by cgchoffman <cgchoffman@gmail.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1933,8 +1933,26 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/t
 feature-core/INSTALLDIR/lib/mozilla/extensions/abyss_skin@activestate.com/skin/window.less
 feature-core/INSTALLDIR/lib/mozilla/extensions/analytics@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/breadcrumbs@activestate.com.xpi
-feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com.xpi
-feature-core/INSTALLDIR/lib/mozilla/extensions/commando@activestate.com.xpi
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/components/koEditorConfig.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/components/koIEditorConfig.xpt
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/editorconfig.jar
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/idl/koIEditorConfig.idl
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/LICENSE.txt
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/__init__.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/compat.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/exceptions.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/fnmatch.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/handler.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/ini.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/main.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/odict.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/versiontools.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-shell-docker@activestate.com.xpi
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-shell-vagrant@activestate.com.xpi
+feature-core/INSTALLDIR/lib/mozilla/extensions/tutorials@activestate.com.xpifeature-core/INSTALLDIR/lib/mozilla/extensions/commando@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/getstarted@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/golang@activestate.com/components/component.manifest
