--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/Komodo/komodo-editorconfig.git
 [submodule "src/modules/focusmode"]
 	path = src/modules/focusmode
-	url = https://github.com:Komodo/Focus-Mode.git
+	url = https://github.com/Komodo/Focus-Mode.git
