Windows Installer: add scope-packages addon to wix.

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2073,6 +2073,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Snippets/Views/xhtml-transitional.komodotool
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/.folderdata
 feature-core/INSTALLDIR/lib/mozilla/extensions/railstools@activestate.com/tools/Test/Unit_Tests.komodotool
+feature-core/INSTALLDIR/lib/mozilla/extensions/scope-packages@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-bookmarks@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-combined@activestate.com.xpi
 feature-core/INSTALLDIR/lib/mozilla/extensions/scope-commands@activestate.com.xpi
