--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1963,6 +1963,10 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pyli
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/main.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/odict.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/versiontools.py
+feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/content/elastic_tabstops.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/content/focusmode.js
