wix: Elastic tabstops is built as a jar.
(integrated from master branch change 9.2.1-462-g60ab481 by Mitchell <mitchellb@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1966,7 +1966,7 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pyli
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/versiontools.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/content/elastic_tabstops.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/content/elastic_tabstops.jar
 feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/chrome.manifest
