--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -2831,14 +2831,15 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/fontawesome@activestate.com/conte
 feature-core/INSTALLDIR/lib/mozilla/extensions/fontawesome@activestate.com/content/youtube.svg
 feature-core/INSTALLDIR/lib/mozilla/extensions/fontawesome@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/jsconsole/MIT-LICENSE.TXT
-feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/jsconsole/console.css
-feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/jsconsole/console.js
-feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/jsconsole/index.html
-feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/jsconsole/observer.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/overlay.xul
 feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/install.rdf
-
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/js/auto-complete.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/js/console.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/js/observer.js
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/less/console.css
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/less/console.less
+feature-core/INSTALLDIR/lib/mozilla/extensions/console@activestate.com/content/views/console.html
+	
 feature-core/INSTALLDIR/lib/mozilla/freebl3.dll
 feature-core/INSTALLDIR/lib/mozilla/gkmedias.dll
 feature-core/INSTALLDIR/lib/mozilla/greprefs.js
