--- a/src/install/wix/komodo.wxs.in
+++ b/src/install/wix/komodo.wxs.in
@@ -174,7 +174,7 @@
     <CustomAction Id="LaunchProduct" FileKey="KomodoExe"
         ExeCommand="" Return="asyncNoWait" />
     <CustomAction Id="OpenDocs" BinaryKey="startw.exe"
-        ExeCommand='"[INSTALLDIR]lib\mozilla\chrome\komododoc\locale\en-US\top.html"' Return="asyncNoWait" />
+        ExeCommand='"http://docs.komodoide.com/manual"' Return="asyncNoWait" />
     <!-- XXX CustomAction to set ARPINSTALLLOCATION? -->
 
     <!-- Quote INSTALLDIR because it likely contains spaces. Add '.' suffix
