fix: django: Fixed Django linter for Python3 - fixes #140 By default Python2 was used. Python3 is used as a fallback now.
rn=

(integrated from master branch change 9.2.1-703-gfb40dc2 by Mitchell <mitchellb@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1728,6 +1728,7 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveS
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/lexers/Django.lexres
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/pylib/djangoLinter.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/pylib/djangoLinter3.py
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/pylib/lang_django.py
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/templates/All Languages/Django.django.html
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/django_language@ActiveState.com/templates/Common/Django.django.html
