languages: Initial support for JSX syntax highlighting.
rn=

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1938,7 +1938,16 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/docker_language@ActiveS
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/docker_language@ActiveState.com/components/koDocker_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/docker_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/docker_language@ActiveState.com/lexers/Docker.lexres
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/components/koJSX_UDL_Language.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/lexers/JSX.lexres
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/pylib/lang_jsx.py
 feature-core/INSTALLDIR/lib/sdk/udl/docker-mainlex.udl
+feature-core/INSTALLDIR/lib/sdk/udl/jsx-mainlex.udl
+feature-core/INSTALLDIR/lib/sdk/udl/jsx/html2jsx.udl
+feature-core/INSTALLDIR/lib/sdk/udl/jsx/jsx2html.udl
 feature-core/INSTALLDIR/lib/sdk/udl/mustache-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/mustache/css2mustache.udl
 feature-core/INSTALLDIR/lib/sdk/udl/mustache/html2mustache.udl
