languages: New AngularJS lexer and codeintel support.
rn=

(integrated from master branch change 9.2.1-833-gf490aa2 by Mitchell <mitchellb@activestate.com>)

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -6678,6 +6678,11 @@ feature-core/INSTALLDIR/lib/sdk/udl/xml.udl
 feature-core/INSTALLDIR/lib/sdk/udl/xslt-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/xul-mainlex.udl
 feature-core/INSTALLDIR/lib/support/catalogs/catalog.xml
+feature-core/INSTALLDIR/lib/support/catalogs/angularjs/catalog.xml
+feature-core/INSTALLDIR/lib/support/catalogs/angularjs/ng.dtd
+feature-core/INSTALLDIR/lib/support/catalogs/angularjs/html5-lat1.ent
+feature-core/INSTALLDIR/lib/support/catalogs/angularjs/html5-special.ent
+feature-core/INSTALLDIR/lib/support/catalogs/angularjs/html5-symbol.ent
 feature-core/INSTALLDIR/lib/support/catalogs/docbook44/calstblx.dtd
 feature-core/INSTALLDIR/lib/support/catalogs/docbook44/catalog.xml
 feature-core/INSTALLDIR/lib/support/catalogs/docbook44/dbcentx.mod
