Added classic.ksf to wix

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -7271,6 +7271,7 @@ feature-core/INSTALLDIR/lib/support/samples/tools/toggle-word-wrap-edit.komodoto
 feature-core/INSTALLDIR/lib/support/samples/xslt_sample.xsl
 feature-core/INSTALLDIR/lib/support/schemes/Cupertino.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Default.ksf
+feature-core/INSTALLDIR/lib/support/schemes/Classic.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Isotope.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Londontube.ksf
 feature-core/INSTALLDIR/lib/support/schemes/Monokai.ksf
